		* Remove/mask rows with missing values
		* Allow to sort the whole spreadsheet even if one single column was selected, use it rather as the key sort column
		* When generating values via a mathematical expression ("generate function values"), allow to use variables in CAS-notebooks as source columns
		* Generate equidistant Date&Time values
	* [notebook]
		* Export to PDF
		* "Configure CAS" in the menu to create a new notebook to directly allow the user to enable new backends in case not done yet
		* In case the correct path to a CAS like Maxima, etc. was configured, allow to use it without restarting LabPlot
	* [import]
		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
		* Support data import from ODS (Open Document Spreadsheet) files
		* Addeded seaborn's datasets to the collection of datasets

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)

Bug fixes:
	* Set mousemode to selection when leaving the plot (Issue #614)
	* Fix plot range field not being updated (Issue #603)
	* Fix wrong axis tick type used (Issue #571)
	* Fix wrong infoelement position when removing active curve (Issue #666)
	* Fix copying Elements (Issue #622)

Internal:
	* Switch from C++11 to C++17
	* Support Qt6
	* Reduce code duplication caused by multiple plot types (Issue #540)
	* Update included QXlsx to 1.4.6
	* Build separate libraries for backend, nsl and everything and link
	only when needed in tests
	* Log skipped tests

-----2.10.1 (12.07.2023) -----
Bug fixes:
	* Support markdown library discount version 3
	* Improve Vector BLF dependency (git download must be enabled if needed)
	* Correctly use system header of system QXlsx (BUG 468651)
	* Fix group separator problem in formulas (BUG 468098)
	* Improve log scales (auto scaling and tick number)
	* Improve auto scale (Issue #536)
	* Fix limits when changing scale (Issue #446)